--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue3-apexcharts": "^1.8.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "prettier": "^3.3.3"
   }
 }
